[package]
name = "coding-interviews"
version = "0.1.0"
authors = ["mutexlock <xiebei1108@outlook.com>"]
edition = "2018"

[dependencies]
docopt = "1"
serde = "1.0"
serde_derive = "1.0"
indicatif = "0.11"
reqwest = "0.9.9"                # higher level HTTP client library
scraper = "0.9.1"                  # HTML parsing and querying with CSS selectors
select = "0.4.2"                            # A library to extract useful data from HTML documents, suitable for web scraping.